conf/iptables-firewall.rules
# Generated by iptables-save v1.8.7 on Sun Aug 16 11:06:58 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [11:804]
:OUTPUT ACCEPT [0:0]
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o eth1 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -i eth0 -o eth1 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -i eth0 -o eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -i eth2 -o eth1 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -i eth2 -o eth1 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -i eth2 -o eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -i eth2 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o eth2 -j DROP
COMMIT
# Completed on Sun Aug 16 11:06:58 2026
# Generated by iptables-save v1.8.7 on Sun Aug 16 11:06:58 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i eth2 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128
-A POSTROUTING -s 192.168.3.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Sun Aug 16 11:06:58 2026
